cmake_minimum_required(VERSION 3.22 FATAL_ERROR)
project(
    FileSystemModel
    VERSION 0.0.1
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

find_package(yaml-cpp REQUIRED)

set(CONFIGS_SOURCES ${CMAKE_SOURCE_DIR}/configs)
set(CONFIGS_DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CONFIGS_SOURCES} DESTINATION ${CONFIGS_DESTINATION})
